[quarkus-application_20b] Removed org.springframework.data:spring-data-commons dependency